Revelation changelog

---------------[ xxxx-xx-xx : 0.3.3 ]---------------

2004-08-23  Erik Grinaker <erikg@codepoet.no>

	* changed the accelerators for adding, editing and removing
	entries to Control-Insert, Control-Return and Control-Delete

	* added key handler to the tree view to allow Insert, Return
	and Delete to be used when navigating the tree

2004-08-12  Erik Grinaker <erikg@codepoet.no>

	* added a password generator dialog

2004-08-11  Erik Grinaker <erikg@codepoet.no>

	* minor tweaks to launcher code

	* added a search toolbar

2004-08-10  Erik Grinaker <erikg@codepoet.no>

	* added an exception handler which displays a dialog with
	a traceback whenever an unhandled exception occurs

	* fixed a bug in the edit entry dialog which caused entry
	description to not be set

	* added config_get() and config_connect() functions

	* added initial launcher support

	* added exception handler for KeyboardInterrupt (Control-C)


---------------[ 2004-08-09 : 0.3.2 ]---------------

2004-08-09  Erik Grinaker <erikg@codepoet.no>

	* don't try to load the removed druid module

	* bumped version number to 0.3.2


---------------[ 2004-08-08 : 0.3.1 ]---------------

2004-08-08  Erik Grinaker <erikg@codepoet.no>

	* merged the ui module into the widget module

	* fixed some bugs introduced during development

	* the window position is stored on quit

2004-08-07  Erik Grinaker <erikg@codepoet.no>

	* minor code cleanups

2004-08-06  Erik Grinaker <erikg@codepoet.no>

	* updated NEWS file

	* bumped version number to 0.3.1

2004-08-03  Erik Grinaker <erikg@codepoet.no>

	* the text entry in the find dialog is activated after
	the "No match found" dialog has been displayed

	* added import/export of GNOME Password Manager files

2004-08-02  Erik Grinaker <erikg@codepoet.no>

	* added access keys to popup menus

	* code cleanups

	* updated some of the text files

2004-07-29  Erik Grinaker <erikg@codepoet.no>
